refactor: adjust message comment footer padding

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -608,6 +608,9 @@ p {
   padding: 1.6rem 0;
   border-bottom: 1px solid #d4d2d2;
 }
+#app .message__comment--content:last-of-type {
+  border-bottom: none;
+}
 #app .message__comment--user {
   display: flex;
   justify-content: space-between;
@@ -618,6 +621,7 @@ p {
   font-size: 1.4rem;
 }
 #app .message__comment--footer {
+  padding: 1.2rem 1.6rem;
   border-bottom-left-radius: 3rem;
   border-bottom-right-radius: 3rem;
 }
